--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     
       <div class="contenedor_imagen">
         
-      <img class="imagen" src="/images/image-equilibrium.jpg" >
+      <img class="imagen" src="images/image-equilibrium.jpg" >
         <div class="hover">
-          <img src="/images/icon-view.svg" alt="">
+          <img src="images/icon-view.svg" alt="">
         </div>
       </img>     
       </div>
@@ -34,7 +34,7 @@
     <section class="info">
       <div class="division1">
         <div class="diamn">
-          <img src="/images/icon-ethereum.svg" alt="">
+          <img src="images/icon-ethereum.svg" alt="">
         </div>
           <div class="et">
             <p>0.041eTH</p>
