--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     
       <div class="contenedor_imagen">
         
-      <img class="imagen" src="images/image-equilibrium.jpg" >
+      <img class="imagen" src="images/image-equilibrium.jpg" alt="">
         <div class="hover">
           <img src="images/icon-view.svg" alt="">
         </div>
